deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llama-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: llama
  template:
    metadata:
      labels:
        app: llama
    spec:
      containers:
      - name: llama
        image: rkg1983/llama:2a16612d638f42c66f4c535c7c6b9683bcb612a0
        ports:
        - containerPort: 8080
