service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llama-service
spec:
  selector:
    app: llama
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
